--- a/app/webroot/css/style.scss
+++ b/app/webroot/css/style.scss
@@ -32,6 +32,17 @@ $dark_grey: #444444;
 	font-style: normal;
 }
 
+#preloadedImages
+{
+    width: 0px;
+    height: 0px;
+    display: inline;
+    background-image: url(../img/icon_help_hover.png);
+    background-image: url(../img/icon_friends_hover.png);
+    background-image: url(../img/icon_about_hover.png);
+    background-image: url(../img/icon_imprint_hover.png);
+    background-image: url(../img/icon_contact_hover.png);
+}
 
 body, html { height: 100%; font-family: 'effraregular', Helvetica, Arial, sans-serif; }
 ul { list-style-type:none; padding: 0; margin: 0; }
@@ -187,6 +198,34 @@ button, .button {
 						&#btn_prev_video {
 							background-image: url(../img/icon_arrow_left.png);
 						}
+						&:hover {
+							opacity: 0.6;
+						}
+					}
+					#infos_video {
+						height: 50px;
+						margin: 20px 0 30px 0;
+						.btn_nav_video {
+							display: inline-block;
+							width: 8%;
+						}
+						#wrapper_infos_video {
+							display: inline-block;
+							width: 83%;
+							img {
+								float: left;
+								vertical-align: center;
+								margin-right: 10px;
+							}
+							.name_professor {
+								font-style: italic;
+								color: $dark_grey;
+							}
+							h3 {
+								font-size: 1.2em;
+								margin: 0;
+							}
+						}
 					}
 					#bottom_video {
 						width: 100%;
@@ -218,6 +257,14 @@ button, .button {
 					width: 42%;
 					.block_videopage {
 						display: none;
+						min-height: 310px;
+						.textarea {
+							display: block;
+							width: 100%;
+							table {
+								width: 100% !important;
+							}
+						}
 						&.active {
 							display: block;
 						}
@@ -319,13 +366,17 @@ button, .button {
 						background-image: url(../img/icon_lessons.png); 
 					}
 					#menu_lessons {
-						z-index: 99;
+						z-index: 20;
 						display: none;
 						position: absolute;
 						right: -250px;
 						width: 250px;
 						background-color: #FFF;
 						margin-top: -75px;
+						height: auto;
+						a {
+							width: 100%;
+						}
 						li {
 							cursor: pointer;
 							height: 30px;
@@ -340,6 +391,7 @@ button, .button {
 								background-color: #FFF;
 								width: 300px;
 								margin-top: -35px;
+								height: auto;
 							}
 							&:last-child {
 								border: 0;
@@ -372,6 +424,19 @@ button, .button {
 		}
 	}
 }
+#small_header {
+	width: 7%;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	display: block;
+	left: 0;
+	z-index: 99;
+	a {
+		display: block;
+		margin: 20px 0; 
+	}
+}
 
 #user_block {
 	z-index: 99;
@@ -379,32 +444,68 @@ button, .button {
 	top: 20px;
 	right: 20px;
 	color: #FFF;
-	width: 32%;
+	width: 320px;
 	text-align: right;
 	span { font-family: 'adam', Arial, sans-serif; float: left; line-height: 26px; margin-right: 8px; }
-	.input { float: left; }
+	input { 
+		float: left; 
+		padding: 5px;
+		width: 130px;
+		margin: 3px;
+		&[type=submit] {
+			@extend .button;
+			width: 40px;
+			line-height: 18px;
+		}
+	}
 	#buttons_users {
 		a {
 			display: inline-block;
 			margin: 0 2px;
+			width: 140px;
 		}
 	}
 
 }
 
-#search_lessons { 
-	width: 200px;
-	height: 40px;
-	border: 0; 
+#search_form {
+	margin: 10px 0;
+	border-bottom: 1px solid $blue;
+	#search_lessons { 
+		width: 95%;
+		height: 40px;
+		border: 0;
+		padding: 10px;
+		font-size: 13px;
+		outline: none
+	}
+	&::before {
+		content: "";
+		display: block;
+		height: 40px;
+		width: 40px;
+		background-image: url(../img/icon_search.png);
+		float: left;
+	}
 }
+
 .highlight {
 	background-color: yellow;
 }
 .pole_presentation { 
-	display: inline-block;
-	width: 22%;
+	margin-top: 40px;
+	width: 25%;
 	text-align: center;
-	border: 1px solid #000;
+	float: left;
+	h3 {
+		text-transform: uppercase;
+		font-size: 1.1em;
+		width: 80%;
+		margin: 0 auto 20px auto;
+		height: 45px;
+		line-height: 18px;
+		border-bottom: 2px solid $green;
+	}
 }
 
 
@@ -413,14 +514,24 @@ button, .button {
 	#block_noconnected {
 		width: 61%;
 		height: 97%;
-		background-color: rgba(255, 255, 255, 0.5);
+		background-color: rgba(255, 255, 255, 0.4);
 		position: absolute;
-		z-index: 99;
+		z-index: 10;
 		left: 50%;
 		margin-left: -330px;
 		top: 50%;
 		margin-top: -330px;
 		border-radius: 50%;
+		#wrapper_noconnected {
+			text-align: center;
+			width: 50%;
+			margin: 40% auto;
+			a {
+				display: block;
+				width: 200px;
+				margin: 10px auto;
+			}
+		}
 	}
 	#drawing_dome {
 		display: block;
@@ -445,65 +556,75 @@ button, .button {
 	a { height: 100%; width: 100%; display: block; }
 }
 
-.item_nav_video {
-	display: block;
-	background: $blue;
-	width: 30px;
-	height: 30px;
-	text-align: center;
-	position: relative;
-	float: left;
-	.title_video {
-		display: none;
-		position: absolute;
-		top: -23px;
-		left: 50%;
-		width: 100%;
-	}
-	&.active {
-		background: $blue_hover;
+#navigation_videos {
+	margin: 30px 0 15px 0;
+	.item_nav_video {
+		display: block;
+		background: $blue;
+		width: 30px;
+		height: 30px;
+		text-align: center;
+		position: relative;
+		float: left;
 		.title_video {
-			display: block;
-		}
-		&::after{
-			content: '';
-			background-image: url(../img/icon_arrow_down.png);
-			width: 20px;
-			height: 20px;
-			display: block;
+			display: none;
 			position: absolute;
-			right: -10px;
-			top: 0;
-			z-index: 10;
+			top: -23px;
+			left: 50%;
+			width: 100%;
+
 		}
-	}
-	a {
-		color: #FFF;
-		width: 100%;
-		height: 100%;
-		display: none;
-		line-height: 30px;
-	}
-	&:hover {
+		&.active {
+			background: $blue_hover;
+			.title_video {
+				display: block;
+			}
+			&::after{
+				content: '';
+				background-image: url(../img/icon_arrow_down.png);
+				width: 20px;
+				height: 20px;
+				display: block;
+				position: absolute;
+				right: -10px;
+				top: 0;
+				z-index: 10;
+			}
+		}
 		a {
-			display: block;
+			color: #FFF;
+			width: 100%;
+			height: 100%;
+			display: none;
+			line-height: 30px;
 		}
-		.title_video {
-			display: block;
+		&:hover {
+			a {
+				display: block;
+			}
+			.title_video {
+				display: block;
+			}
+			&::after{
+				content: '';
+				background-image: url(../img/icon_arrow_down.png);
+				width: 20px;
+				height: 20px;
+				display: block;
+				position: absolute;
+				right: -10px;
+				top: 0;
+				z-index: 10;
+			}
 		}
-		&::after{
-			content: '';
-			background-image: url(../img/icon_arrow_down.png);
-			width: 20px;
-			height: 20px;
-			display: block;
-			position: absolute;
-			right: -10px;
-			top: 0;
-			z-index: 10;
+		&:last-child {
+			.title_video { 
+				left: 0;
+			}
 		}
 	}
 }
+
 
 .bloc_notes {
 	width: 100%;
