--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -290,7 +290,7 @@ button, .button, #user_block input[type=submit] {
 #header {
   height: 100%;
   width: 10%;
-  background-color: #FFF;
+  background-color: #f3f3f3;
   float: left;
   position: relative; }
   #header #menu {
@@ -321,7 +321,10 @@ button, .button, #user_block input[type=submit] {
             background-position: center;
             margin: 0 auto; }
           #header #menu ul li a p {
-            margin: 5px 0; }
+            margin: 5px 0;
+            color: #7a7a7a; }
+        #header #menu ul li:hover p {
+          color: #000; }
         #header #menu ul li:first-child {
           height: 10%;
           margin-top: 10%; }
