--- a/app/webroot/css/style.scss
+++ b/app/webroot/css/style.scss
@@ -50,7 +50,7 @@ $grey_text_header: #7A7A7A;
 	}
 	.button {
 		width: 200px;
-		margin: 0 auto;
+		display: inline-block;
 	}
 }
 
@@ -114,7 +114,7 @@ button, .button {
 	}
 	&#btn_addDome {
 		width: 300px;
-		margin: 0 auto;
+		margin: 20px auto;
 	}
 }
 
