--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -635,3 +635,62 @@ button, .button, #user_block input[type=submit] {
 #wrapper_imprint {
   width: 90%;
   margin: 20px auto 0 auto; }
+
+.form .txt-field::-webkit-input-placeholder {
+  color: #b1b3b5; }
+
+.form .txt-field::-moz-placeholder {
+  color: #b1b3b5; }
+
+.form .txt-field:-moz-placeholder {
+  color: #b1b3b5; }
+
+.form .txt-field:-ms-input-placeholder {
+  color: #b1b3b5; }
+
+.form .txt-field:focus::-webkit-input-placeholder {
+  color: transparent; }
+
+.form .txt-field:focus::-moz-placeholder {
+  color: transparent; }
+
+.form .txt-field:focus:-moz-placeholder {
+  color: transparent; }
+
+.form .txt-field:focus:-ms-input-placeholder {
+  color: transparent; }
+
+#page_signup .form {
+  width: 40%;
+  margin: 0 auto; }
+  #page_signup .form .input {
+    margin: 0 0 20px 0;
+    position: relative; }
+    #page_signup .form .input input {
+      width: 100%;
+      height: 40px;
+      padding: 6px 15px 5px;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      border: 1px solid #dadada;
+      border-radius: 3px;
+      color: #000;
+      outline: none; }
+    #page_signup .form .input .caption {
+      position: absolute;
+      left: 10px;
+      top: -10px;
+      padding: 0 5px;
+      background: #fff;
+      font-size: 12px;
+      color: #545555;
+      cursor: default;
+      opacity: 0; }
+    #page_signup .form .input.active .caption {
+      opacity: 1;
+      -webkit-transition: opacity 0.2s;
+      -moz-transition: opacity 0.2s;
+      -ms-transition: opacity 0.2s;
+      -o-transition: opacity 0.2s;
+      transition: opacity 0.2s; }
